tests/error/break_outside_loop.vow
// TEST: stderr "outside of a loop"
module BreakOutsideLoop

fn main() -> i32 {
    break;
    0
}
